# TractorKit-Peripheral-FW

./: .gitignore  CMakeLists.txt  README.md  esconfig  naconfig  naconfig.old  partitions.csv  release.sh
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/BLE/: ble.c  gatt.c  tk_uuid.h
main/OTA/: wifi.c
main/drivers/GPS/: gps.c  gps.h  nmea_parser.h
main/drivers/LED/: led_onboard.c  led_onboard.h
main/drivers/RPM/: hall.c  hall.h  pulse.c  pulse.h
main/drivers/thermo/: MLX90614_API.c  MLX90614_API.h  MLX90614_SMBus_Driver.c  MLX90614_SMBus_Driver.h  thermo.c  thermo.h
main/model/: datastore.h  engine.h  location.h  nvsettings.c  nvsettings.h  peripheral_settings.h
